# django_store

./: .coveragerc  README.md  pyproject.toml
django_store/: settings.py  urls.py
