[tool.poetry]
name = "django_store"
version = "0.1.0"
description = ""
authors = ["Fabio Oliveira <fabio20rj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "2.2.16"
psycopg2-binary = "^2.8.6"
python-decouple = "^3.3"
dj-database-url = "^0.5.0"
gunicorn = "^20.0.4"
djangorestframework = "^3.12.2"
django-cors-headers = "^3.5.0"

[tool.poetry.dev-dependencies]
pytest-django = "^4.1.0"
flake8 = "^3.8.4"
black = "^20.8b1"
ipython = "^7.19.0"
django-extensions = "^3.0.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
